[project]
name = "ssh-mcp-server-python"
version = "1.0.0"
description = "SSH MCP Server implemented in Python using FastMCP"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "paramiko",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/SuperPyonchiX/ssh_mcp_server_python"
Repository = "https://github.com/SuperPyonchiX/ssh_mcp_server_python"

[project.scripts]
ssh-mcp-server = "ssh_mcp_server_python.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []
